<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textDirection="locale"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Not_a_member"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/login_button_login"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login"
            app:layout_constraintVertical_bias="0.85" />

        <TextView
            android:id="@+id/register_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/bold"
            android:text="@string/register_here"
            android:textAllCaps="false"
            android:textColor="@color/blueish"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/forgetPassword_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <EditText
            android:id="@+id/enter_phone_number_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_field_style"
            android:ellipsize="start"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:gravity="fill_vertical"
            android:hint="@string/user_id"
            android:inputType="phone"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/input_field_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <EditText
            android:id="@+id/enter_password_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:width="0dp"
            android:height="50dp"
            android:autoText="true"
            android:background="@drawable/input_field_style"
            android:ellipsize="end"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:gravity="fill_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/input_field_text_size"
            app:layout_constraintEnd_toEndOf="@+id/enter_phone_number_login"
            app:layout_constraintStart_toStartOf="@+id/enter_phone_number_login"
            app:layout_constraintTop_toBottomOf="@+id/enter_phone_number_login" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:width="50sp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/regular"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/enter_password_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/enter_password_login"
            app:layout_constraintTop_toBottomOf="@+id/enter_password_login" />

        <TextView
            android:id="@+id/forgetPassword_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/forget_password"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_button_login"
            app:layout_constraintEnd_toEndOf="@+id/enter_password_login"
            app:layout_constraintTop_toTopOf="@+id/login_button_login"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/sign_up_text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/hello_there"
            android:textColor="@color/grey"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/countryCodeSpinner_login"
            app:layout_constraintEnd_toEndOf="@+id/enter_phone_number_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/enter_phone_number_login" />

        <ImageView
            android:id="@+id/back_button_log_in"
            android:layout_width="56dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_text_signup"
            app:layout_constraintStart_toStartOf="@+id/sign_up_text_signup"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_arrow_foreground" />

        <ProgressBar
            android:id="@+id/progressBar_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/countryCodeSpinner_login"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:minWidth="60sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/enter_phone_number_login"
            app:layout_constraintEnd_toEndOf="@+id/enter_phone_number_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/enter_phone_number_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>