<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RequestOTPFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edit_phone_number_after_otp"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/input_field_style"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="@string/user_id"
            android:inputType="number"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/receiveOTP_signUp"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:width="50sp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/regular"
            android:text="@string/receive_otp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_text_signup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_phone_number_after_otp"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone_number_after_otp" />

        <TextView
            android:id="@+id/sign_up_text_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/sign_up_text_otp"
            android:textColor="@color/grey"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/countryCodeSpinner_signin"
            app:layout_constraintEnd_toEndOf="@+id/edit_phone_number_after_otp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_phone_number_after_otp" />

        <ImageView
            android:id="@+id/back_button_otp_request"
            android:layout_width="56dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/edit_phone_number_after_otp"
            app:layout_constraintStart_toStartOf="@+id/edit_phone_number_after_otp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_arrow_foreground" />

        <ProgressBar
            android:id="@+id/progressBar_cyclic_signup_otp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/countryCodeSpinner_signin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:minWidth="60sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_phone_number_after_otp"
            app:layout_constraintEnd_toEndOf="@+id/edit_phone_number_after_otp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_phone_number_after_otp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>