<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/phone_number_after_otp"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_field_style"
            android:ems="10"
            android:focusable="false"
            android:fontFamily="@font/regular"
            android:gravity="start|left|center_vertical"
            android:hint="@string/user_id"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/input_field_text_size"
            app:layout_constraintBottom_toTopOf="@+id/enter_password_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/enter_password_signup"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:background="@drawable/input_field_style"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/input_field_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/phone_number_after_otp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/phone_number_after_otp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:width="50sp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/regular"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/phone_number_after_otp"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintStart_toStartOf="@+id/phone_number_after_otp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/sign_up_text_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/sign_up_text"
            android:textColor="@color/grey"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/phone_number_after_otp"
            app:layout_constraintEnd_toEndOf="@+id/phone_number_after_otp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/phone_number_after_otp" />

        <ImageView
            android:id="@+id/back_button_sign_up"
            android:layout_width="56dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/phone_number_after_otp"
            app:layout_constraintStart_toStartOf="@+id/phone_number_after_otp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_arrow_foreground" />

        <ProgressBar
            android:id="@+id/progressBar_cyclic_signup"
            style="?android:attr/progressBarStyle"
            android:layout_width="84dp"
            android:layout_height="65dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input_field_style"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/enter_password_signup"
            app:layout_constraintStart_toStartOf="@+id/enter_password_signup"
            app:layout_constraintTop_toBottomOf="@+id/enter_password_signup">

            <EditText
                android:id="@+id/editOTPDigit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:nextFocusRight="@+id/editOTPDigit2"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/input_field_text_size" />

            <EditText
                android:id="@+id/editOTPDigit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:nextFocusRight="@+id/editOTPDigit3"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/input_field_text_size" />

            <EditText
                android:id="@+id/editOTPDigit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:nextFocusRight="@+id/editOTPDigit4"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/input_field_text_size" />

            <EditText
                android:id="@+id/editOTPDigit4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:nextFocusRight="@+id/editOTPDigit5"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/input_field_text_size" />

            <EditText
                android:id="@+id/editOTPDigit5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="1"
                android:nextFocusRight="@+id/editOTPDigit6"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/input_field_text_size" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>